# face-and-names

./: .gitignore  .pre-commit-config.yaml  AGENT.md  LICENSE  README.md  commit-notes.md  main.py  pyproject.toml  reproduce_bug.py  ruff.toml  test_sqlite_date.py
docs/: additional_requirements.md  architecture.md  build_run.md  config.md  dependencies.md  detector_adapter.md  directory_structure.md  face_detection_pipeline.md  functional_requirements.md  hash_scheme.md  kickoff_checklist.md  linting.md  logging.md  model_runner.md  next_steps.md  plan.md  requirements.md  schema.md  service_contracts.md  testing.md  traceability.md  training_pipeline_design.md  training_poc_summary.md  ui.md  ui_todo.md  ui_wireframes.md  workers.md
face_and_names/: __init__.py  __main__.py  app.py  app_context.py  constants.py  train_model.py
face_and_names/config/: __init__.py  defaults.py  loader.py
face_and_names/logging/: __init__.py  setup.py
face_and_names/models/: __init__.py  db.py  repositories.py  schema.sql
face_and_names/services/: clustering_service.py  data_reset.py  detector_adapter.py  diagnostics_service.py  export_import_service.py  faces_workspace_controller.py  ingest_service.py  people_service.py  person_registry.py  prediction_apply.py  prediction_service.py  workers.py
face_and_names/tests/: __init__.py  test_app_context.py  test_clustering_service.py  test_config_loader.py  test_data_reset.py  test_db_schema.py  test_detector_adapter.py  test_end_to_end.py  test_face_tile.py  test_faces_page_helpers.py  test_imaging_and_hashes.py  test_ingest_service.py  test_people_service.py  test_person_registry.py  test_prediction_apply.py  test_prediction_service.py  test_repositories.py  test_smoke.py  test_training_pipeline.py  test_ui_clustering_page_sort.py  test_ui_faces_page.py  test_ui_prediction_review.py  test_workers.py
face_and_names/training/: __init__.py  data_loader.py  embedding.py  model_io.py  trainer.py
face_and_names/ui/: __init__.py  clustering_page.py  faces_page.py  import_page.py  main_window.py  people_groups_page.py  prediction_review_page.py  prediction_training_page.py  settings_page.py
face_and_names/ui/components/: __init__.py  face_tile.py
face_and_names/utils/: __init__.py  event_bus.py  hashing.py  identity.py  imaging.py  paths.py
scripts/: arcface2.py
src/: main.py
src/core/: cache.py  database.py  face_clusterer.py  face_detector.py  model_manager.py  prediction_helper.py
src/core/db/: __init__.py  context.py  face_service.py  import_service.py  metadata_service.py
src/ui/: clustering_widget.py  database_analysis_widget.py  detection_widget.py  main_window.py  name_analysis_widget.py  name_image_viewer.py  naming_widget.py  prediction_review_widget.py  prediction_widget.py  thumbnail_viewer.py  vggface_training_widget.py
src/ui/components/: face_image_widget.py  folder_tree.py  image_tree.py  timeline_widget.py
src/ui/shared/: face_image_widget.py  font_config.py  image_preview.py  image_utils.py  splash.py  thumbnail_loader.py
src/utils/: face_preprocessing.py  image_utils.py  metadata_utils.py  platform.py
tests/: test_cache.py  test_db_services.py  test_regressions.py
